# visaid_builder

./: .gitignore  CONFIGURATION.md  LICENSE  MANIFEST.in  README.md  analyze_tps.py  create_visaid.py  integration_example.py  just_get_media.py  lilhelp.py  post_proc_item.py  proc_doctr.py  proc_swt.py  process_swt.py  pyproject.toml  requirements.txt  run_batch.py  run_job.py  scratchpad.py  use_swt.py  wipr_manage.py
drawer/: lilhelp.py  media_availability.py  mmif_adjunct.py
example_config/: example_batch_01.csv  example_batch_dummy_files.csv  example_config_swt.json  example_config_swt_webservice_windows.json  example_config_swt_windows.json  example_config_whisper.json  example_config_whisper_dummy.json
pbcore_manip/: framify.py
sample_config/: config_swt_1_relative_paths.json  config_swt_1_win.json  config_swt_2_webservice.json  config_whisper_1.json  config_whisper_1_win.json  jobconf_2stage.json  unrestricted_batch.csv
sample_files/: cpb-aacip-4071f72dd46_swt_v72.mmif  cpb-aacip-4071f72dd46_visaid.html  sample_customizations.json
swt/: post_proc_item.py  process_swt.py  visaid.css  visaid_embedded_logic.js  visaid_embedded_styles.css  visaid_style_override.css
visaid_builder/: __init__.py  catification_prompts.py  catout_door.py  catout_ingests.py  catout_tables.py  create_cataid.py  create_visaid.py  integration_example.py  lilhelp.py  post_proc_item.py  proc_swt.py  proc_swt_td.py  use_swt.py  visaid_embedded_styles.css
visaid_ingredients/: visaid_embedded_logic.js  visaid_embedded_styles.css  visaid_enhance.js  visaid_structure.html
(+9 files in other folders)
