[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "visaid_builder"
version = "1.97.2"
description = "Routines for processing MMIF files to create visual indexes ('visaids') and other useful output."
dependencies = [
    "av>=12.0.0",
    "pillow>=10.3.0",
    "mmif-python>=1.1.2",
    "titlecase>=2"
]

[project.scripts]
visswt = "visaid_builder.use_swt:main"

[project.urls]
"Homepage" = "https://github.com/WGBH-MLA/visaid_builder"
"Source" = "https://github.com/WGBH-MLA/visaid_builder"

[tool.setuptools.packages.find]
include = ["visaid_builder"]
